Feat: add Futura Book & Demi fonts

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,8 +1,9 @@
+@import 'templates/fonts'
 @import 'templates/variables'
 @import 'templates/grid'
 @import 'templates/interface'
 @import 'templates/header'
 
 body
-    font-family: sans-serif
+    font-family: 'Futura Book', sans-serif
     font-size: 14px
