--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,7 +3,10 @@
 @import 'templates/grid'
 @import 'templates/interface'
 @import 'templates/header'
+@import 'templates/hero'
 
+*, *:before, *:after
+    box-sizing: border-box
 body
     font-family: 'Futura Book', sans-serif
     font-size: 14px
