--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -18,6 +18,9 @@
         text-decoration: none
         color: $light
         margin-right: 40px
+        transition: 0.2s
+        &:hover
+            color: $primary
 
 .phone
     color: $primary
