--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,12 +1,17 @@
 @import 'templates/fonts'
 @import 'templates/variables'
+@import 'templates/settings'
 @import 'templates/grid'
 @import 'templates/interface'
 @import 'templates/header'
 @import 'templates/hero'
-
-*, *:before, *:after
-    box-sizing: border-box
-body
-    font-family: 'Futura Book', sans-serif
-    font-size: 14px
+@import 'templates/control'
+@import 'templates/types'
+@import 'templates/design'
+@import 'templates/team'
+@import 'templates/customers'
+@import 'templates/modal'
+@import 'templates/projects'
+@import 'templates/footer'
+@import 'templates/media'
+@import 'templates/animated'
