--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -13,12 +13,19 @@
 .logo
     color: $primary
     text-transform: uppercase
+    text-decoration: none
+    font-size: 1.03rem
+    transition: 0.2s
+    &:hover
+        color: $light
 .nav
     &__item
         text-decoration: none
         color: $light
-        margin-right: 40px
+        margin-right: 2.5rem
         transition: 0.2s
+        text-transform: uppercase;
+        font-weight: normal;
         &:hover
             color: $primary
 
@@ -26,4 +33,4 @@
     color: $primary
 .contacts
     &__phone
-        margin-right: 45px
+        margin-right: 3rem
