--- a/src/sass/templates/_interface.sass
+++ b/src/sass/templates/_interface.sass
@@ -1,8 +1,10 @@
 .button
-    padding: 13px 20px
+    padding: 11px 23px
     border: none
     border-radius: 2px
     text-transform: uppercase
+    font-size: 0.93rem
+    outline: none
     &:hover
         cursor: pointer
     &--primary
@@ -10,11 +12,100 @@
         color: $light
         box-shadow: 0px 5px 15px rgba($primary, 0.2)
         transition: box-shadow 0.3s
+        transition: 0.2s
         &:hover
             box-shadow: none
+            background-color: $light
+            color: $primary
     &--outline
         border: 1px solid $light
         background-color: transparent
         color: $light
+        padding: 18px 40px
+        transition: 0.2s
+        &:hover
+            background-color: $primary
+.lable
+    font-size: 1.07rem
+    &--light
+        color: rgba($light, 0.5)
+    &--dark
+        color: rgba($dark, 0.5)
+.input
+    border: none
+    background-color: transparent
+    border-bottom: 1px solid rgba(54, 54, 54, 0.3)
+    font-size: 1.285rem
+    color: $light
+    padding: 0.5rem 0
+    outline: none
+    &-group
+        position: relative
+    &--light
+        &::placeholder
+            color: $light
+.policy
+    &__checkbox
+        opacity: 0
+        visibility: hidden
+        &:checked +
+            .policy__label
+                &::before
+                    background: $primary url('../img/icon/check.svg') no-repeat center / 0.8rem
+    &__label
+        display: flex
+        align-items: center
+        font-size: 1.14rem
+        &::before
+            content: ''
+            width: 18px
+            height: 18px
+            border: 1px solid $primary
+            border-radius: 1px
+            cursor: pointer
+            margin-right: 0.64rem
+        &--center
+            justify-content: center
+#buttonUp
+    display: inline-block
+    background-color: #FF9800
+    width: 50px
+    height: 50px
+    text-align: center
+    border-radius: 4px
+    position: fixed
+    bottom: 30px
+    right: 30px
+    transition: background-color .3s, 
+    opacity .5s, visibility .5s
+    opacity: 0
+    visibility: hidden
+    z-index: 1000
+    &::after
+        content: ''
+        content: "\f077"
+        font-family: FontAwesome
+        font-weight: normal
+        font-style: normal
+        font-size: 2em
+        line-height: 50px
+        color: #fff
+    &:hover
+        cursor: pointer
+        background-color: #333
+    &:active
+        background-color: #555
+    &.show
+        opacity: 1
+        visibility: visible
+div
+    &.invalid
+        position: absolute
+        display: inline
+        top: 54px
+        color: tomato
+input
+    &.invalid
+        border-bottom: 1px solid tomato 
 
-    
+
